Fix header z-index

--- a/administrator/templates/atum/scss/blocks/_header.scss
+++ b/administrator/templates/atum/scss/blocks/_header.scss
@@ -3,7 +3,7 @@
 
 .header {
   position: relative;
-  z-index: 5;
+  z-index: 13;
   height: $header-height;
   background: $white;
   box-shadow: $atum-box-shadow;
